--- a/web/MainMenu.css
+++ b/web/MainMenu.css
@@ -52,8 +52,9 @@ header{
 }
 
 body{
-    background-image: 
-    linear-gradient(69deg,white 24%,#E8F5FE 45%,#E8EAFE 50%,white 75%);
+    /*background-image: */
+    /*linear-gradient(69deg,white 24%,#E8F5FE 45%,#E8EAFE 50%,white 75%);*/
+    background-image: linear-gradient(to right,white,#E8EAFE);
 
 }
 #jumpLink{
