--- a/web/Projectview.css
+++ b/web/Projectview.css
@@ -1,40 +1,83 @@
 
 /*  Css for Project View File */
 
+
 /* */
-#projectSummary{
+.project{
+    border-radius: 360px;
+    background-color: white;
+    margin: 50px;
     
     
 }
-
-#projectHeader{
-    
+.project image{
+    margin: 0;
+    padding:0;
+    width:100%;
+}
+.project img{
+    height: auto;
+    width: 50%;
+    max-width:100%;    
+    margin: 0;
+    padding:0;
+        
     
 }
 
-#projectFooter{
+.projectHeader{
+    background-color: #B2CCEE;
+    font-size: 250%;
+    color:white;
+    margin:0;
+
+}
+.projectSummary{
+    background-color: #F7EFE1;
+    margin:0;
+    padding:5px;
+
     
+}
+.projectSummary h4{
+    margin:0;
+    font-size: 110%;
+}
+.projectFooter{
+    
+    margin: 0;
+    padding:0;
     
 }
 
 /*Link of Projects */
-#projectFooter a{
-    
-}
-#projectTitle{
-    
+.projectFooter a{
+        color:inherit;
+    background-color: inherit;
+
 }
 
+
 #filterOption{
-    
+    display:none;
+    margin:0;
+    margin-left: 70px;
+    padding:0;
 }
 
 #filterLink{
+    border: 1px solid rgba(0,0,0,0.02);
+    color:#B2CCEE;
+    box-sizing: border-box;
+    box-shadow: rgba(0,0,0,0.02) 0 1px 3px 0;
+    align-items:center;
+    font-size: 20px;
+    margin:50px;
     
 }
 
 /* show filterOption */
-filterLink:hover{
-    
+#filterLink:hover + #filterOption, #filterOption:hover{
+    display:block;
 }
 
