--- a/web/MainMenu.css
+++ b/web/MainMenu.css
@@ -1,29 +1,40 @@
 
 /*  Css for all Files */
 
+/* remove underline */
 a{
     text-decoration: none;
     color: inherit; 
 }
+
 header{
-    
     display: flex;
     flex-direction: row;
     justify-content:space-between;
-    
-   
-    
+    margin:0;
+    padding:0;
+    border:0;
+}
+header img{
+    margin: 0;
+    padding:0;
+    width:auto;
+    height:auto;
+    border:0;
+    max-width:95%;    
 }
 
 #login{
-        margin: 0;
-    padding:0;
+    margin: 0;
+    border:0;
+    padding: 10px;
+    /*background-image: 
+    linear-gradient(69deg,white 0%,#FEE8EE 20.57%,#FEEDE8 55%, white 100%);*/
     background-image: 
-    linear-gradient(69deg,white 0%,#FEE8EE 20.57%,#FEEDE8 55%, white 100%);
-
+    repeating-linear-gradient(145.47deg, #bfe4ff 24%, #eaeff2 5%, #ceceff 55.07%, #dfd1f9 77%, #e6e3f5 93%, #eaeff2 100%);
+    
     display: flex;
     border-radius: 10px;
-
     flex-direction: column;
     justify-content:space-between;
     position: static;
@@ -31,7 +42,6 @@ header{
     width: 200px;
     height:110px;
 
-    padding: 10px;
     text-align: right;
 
 }
@@ -42,20 +52,13 @@ header{
     background: white;
 
 }
+#login input[type=submit], #login a{
+    background: white;
+    text-align: right;
+    border:1px solid lightgray;
+    border-radius: 5px;  
+}
 
-#login input[type=submit]{
-    background: white;
-    text-align: right;
-    border:1px solid lightgray;
-    border-radius: 5px;
-   
-}
-#login a{
-    background: white;
-    text-align: right;
-    border:1px solid lightgray;
-    border-radius: 5px;
-}
 
 body{
     /*background-image: */
@@ -63,20 +66,21 @@ body{
     background-image: linear-gradient(to right,white,#E8EAFE);
     margin: 0;
     padding:0;
-    
-
 }
+
 #jumpLink{
-    
     position: fixed;
-    color:white;
     right: 20px;
     bottom: 20px;
+    
+    color:white;
     background-color: #B2CCEE;
     border: 1px solid black;
+    
     text-align: center;
     font-size: 35px;
     font-family: "Brush Script MT", Cursive;
+    
     width: 50px;
     height: 50px;
     border-radius: 45px;
@@ -91,53 +95,45 @@ footer{
     padding:  2px ;
 }
 
+/*navigation menu*/
 #navibar{
-        margin: 0;
+    margin: 0;
     padding:0;
-    border-radius: 12px;
-    list-style-type: none;
-    margin: 0px;
-    padding: 0px;
+
     display:flex;
     flex-direction: row;
     justify-content:space-evenly;
+    
     border: 3px solid #B2CCEE;
-    border-image: linear-gradient(to right,#B2CCEE) 0;
+    border-radius: 12px;
+    /*border-image: linear-gradient(to right,#B2CCEE) 0;*/
     background-color: white;
+    /* automatic full width*/
     width:auto;
-    font-size: 1vw;
-    color: black;
-  	
-
 }
 
+/* fit icon sizes to navigation menu */
 .naviIcon a img{
-   
     align-content:space-evenly;
     height: 65%;
+    max-height: 65%;
     width: auto;
 }
-
+/* menu point*/
 .naviIcon{
     display: flex;
     flex-direction: column;
-  
-    box-shadow: rgba(0,0,0,0.02) 0 1px 3px 0;
+    
     font-size:150%;
-   
     color:black;
     font-family: Verdana;
-
-    font-weight:900;
+    font-weight:bold;
     font-variant: small-caps slashed-zero;
 
 }
-
+/* hover function that changes color of menu points */
 .naviIcon:hover {
     background-color: #F7EFE1;
-    margin:0px;
-    padding:0px;
-    color: black;
-    transition: background-color 1s, color 4s;
+    transition: background-color 1s;
 }
 
