add connection from Rest API to Website

--- a/web/Projectdetail.css
+++ b/web/Projectdetail.css
@@ -69,7 +69,7 @@
 
 .projectHeader{
     /* stick header to the top of the site when scrolling*/
-    position:sticky;
+/*    position:sticky;*/
     top: 0px;
     display: flex;
     flex-direction: row;
