--- a/web/MainMenu.css
+++ b/web/MainMenu.css
@@ -23,7 +23,32 @@ header img{
     border:0;
     max-width:95%;    
 }
+#logoutForm{
+     margin: 0;
+    border:0;
+    padding: 10px;
+    /*background-image: 
+    linear-gradient(69deg,white 0%,#FEE8EE 20.57%,#FEEDE8 55%, white 100%);*/
+    background-image: 
+    repeating-linear-gradient(145.47deg, #bfe4ff 24%, #eaeff2 5%, #ceceff 55.07%, #dfd1f9 77%, #e6e3f5 93%, #eaeff2 100%);
+   
+    display: flex;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content:space-between;
+    position: static;
+    right: 0px;
+    width: 200px;
+    height:110px;
 
+    text-align: right;
+}
+#logout{
+        background: white;
+    text-align: right;
+    border:1px solid lightgray;
+    border-radius: 5px;  
+}
 #login{
     margin: 0;
     border:0;
